# classtify

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.js
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  main.py
backend/app/ai/: openrouter.py
backend/app/api/v1/: health.py  router.py
backend/app/auth/: dependencies.py  manager.py  models.py  router.py  schemas.py
backend/app/core/: errors.py  security.py
backend/app/db/: session.py
backend/app/schemas/: common.py
docs/: ai.md  api-conventions.md  architecture.md  auth.md
docs/frontend/: components.md  design-tokens.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/api/: client.ts
src/lib/components/: app-shell.svelte  index.ts
src/lib/components/ui/: button.svelte  card-content.svelte  card-header.svelte  card-title.svelte  card.svelte
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(app)/schedules/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/(app)/teachers/: +page.svelte
src/routes/(auth)/login/: +page.svelte
