[project]
name = "classtify-backend"
version = "0.1.0"
description = "Classtify API — gestión de horarios escolares"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
